[package]
name = "dwcs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
structopt-flags = "0.3"
shiplift = "0.7"
tokio = { version = "1.12.0", features = [ "full" ] }
tokio-tungstenite = "0.15.0"
futures = "0.3.17"